--- a/youtubeclone.html
+++ b/youtubeclone.html
@@ -11,7 +11,7 @@
         <link rel="stylesheet" href="style/youtubeheader.css">
         <link rel="stylesheet" href="style/youtubesidebar.css">
 
-        <a href= "index.html">link</a>
+        <a href= ".">link</a>
     </head>
 
 
